--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.22",
+    "@types/supertest": "^2.0.12",
     "majestic": "^1.8.0",
     "ts-jest": "^26.5.4"
   },
