--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
     "console": "^0.7.2",
     "jest": "^26.6.3",
     "stream": "^0.0.2",
-    "supertest": "^6.1.3",
-    "typescript": "^4.2.4"
+    "supertest": "^6.1.3"
   },
   "devDependencies": {
     "@types/jest": "^26.0.22",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.16.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.2.2",
+    "eslint-plugin-typescript": "^0.14.0",
     "majestic": "^1.8.0",
-    "ts-jest": "^26.5.4"
+    "ts-jest": "^26.5.4",
+    "typescript": "^4.6.4"
   },
   "scripts": {
     "test": "jest"
