--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.2.2",
     "eslint-plugin-typescript": "^0.14.0",
+    "husky": "^8.0.1",
     "majestic": "^1.8.0",
     "ts-jest": "^26.5.4",
     "typescript": "^4.6.4"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install",
+    "lint": "eslint . --ext .ts"
   },
   "author": "",
   "license": "ISC"
