--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eslint-plugin-typescript": "^0.14.0",
     "husky": "^8.0.1",
     "majestic": "^1.8.0",
-    "ts-jest": "^26.5.4",
+    "jest": "28.1.0",
     "typescript": "^4.6.4"
   },
   "scripts": {
