--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
     "env": {
-        "browser": true,
+        "jest": true,
+        "node": true,
         "es2021": true
     },
     "extends": [
