--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@typescript-eslint/parser": "^5.25.0",
     "eslint": "^8.16.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.2.2",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-typescript": "^0.14.0",
     "husky": "^8.0.1",
-    "majestic": "^1.8.0",
     "jest": "28.1.0",
+    "majestic": "^1.8.0",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.4"
   },
   "scripts": {
