chore: update esline and prettier configs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,37 +1,22 @@
 {
+    "parser": "@typescript-eslint/parser",
     "env": {
         "jest": true,
         "node": true,
         "es2021": true
     },
     "extends": [
-        "airbnb-base",
-        "plugin:jest/recommended",
-        "plugin:@typescript-eslint/recommended"
+        "plugin:@typescript-eslint/recommended",
+        "plugin:prettier/recommended"
     ],
-    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": "latest",
+        "ecmaVersion": 2021,
+        "project": "tsconfig.json",
         "sourceType": "module"
     },
     "plugins": [
-        "@typescript-eslint",
-        "jest"
+        "@typescript-eslint"
     ],
-    "rules": {
-        "import/extensions": [
-            "error",
-            "ignorePackages",
-            {
-                "js": "never",
-                "jsx": "never",
-                "ts": "never",
-                "tsx": "never"
-            }
-        ],
-        "no-restricted-syntax": "off",
-        "guard-for-in": "off"
-    },
     "settings": {
         "import/resolver": {
             "node": {
