--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "console": "^0.7.2",
-    "jest": "^26.6.3",
     "stream": "^0.0.2",
     "supertest": "^6.1.3"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.22",
+    "@types/jest": "^27.5.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
@@ -22,9 +21,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-typescript": "^0.14.0",
     "husky": "^8.0.1",
-    "jest": "28.1.0",
     "majestic": "^1.8.0",
     "prettier": "^2.6.2",
+    "ts-jest": "^28.0.3",
     "typescript": "^4.6.4"
   },
   "scripts": {
