feat: add extra checks ^

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,5 +28,11 @@
                 ]
             }
         }
+    },
+    "rules": {
+        "no-unused-vars": ["error"],
+        "no-console": [
+            "warn"
+        ]
     }
 }
