--- a/package.json
+++ b/package.json
@@ -34,5 +34,6 @@
     "lint": "eslint . --ext .ts"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines" : { "npm" : "~1.0.20" } 
 }
