--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.25.0",
     "eslint": "^8.16.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -21,7 +21,6 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.2.2",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-typescript": "^0.14.0",
     "husky": "^8.0.1",
     "majestic": "^1.8.0",
     "prettier": "^2.6.2",
@@ -34,6 +33,5 @@
     "lint": "eslint . --ext .ts"
   },
   "author": "",
-  "license": "ISC",
-  "engines" : { "npm" : "~1.0.20" } 
+  "license": "ISC"
 }
