--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "openapi-request-validator": "^11.0.1",
     "openapi-response-validator": "^11.0.1",
     "stream": "^0.0.2",
-    "supertest": "^6.1.3"
+    "supertest": "^6.2.3"
   },
   "devDependencies": {
     "@types/supertest": "^2.0.12",
@@ -28,7 +28,8 @@
     "typescript": "^4.6.4"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest --config test/jest-e2e.json",
+    "test:e2e": "jest --config test/jest-e2e.json",
     "prepare": "husky install",
     "lint": "eslint . --ext .ts"
   },
