chore: apply prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,38 +1,25 @@
 {
-    "parser": "@typescript-eslint/parser",
-    "env": {
-        "jest": true,
-        "node": true,
-        "es2021": true
-    },
-    "extends": [
-        "plugin:@typescript-eslint/recommended",
-        "plugin:prettier/recommended"
-    ],
-    "parserOptions": {
-        "ecmaVersion": 2021,
-        "project": "tsconfig.json",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "@typescript-eslint"
-    ],
-    "settings": {
-        "import/resolver": {
-            "node": {
-                "extensions": [
-                    ".js",
-                    ".jsx",
-                    ".ts",
-                    ".tsx"
-                ]
-            }
-        }
-    },
-    "rules": {
-        "no-unused-vars": ["error"],
-        "no-console": [
-            "warn"
-        ]
+  "parser": "@typescript-eslint/parser",
+  "env": {
+    "jest": true,
+    "node": true,
+    "es2021": true
+  },
+  "extends": ["plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
+  "parserOptions": {
+    "ecmaVersion": 2021,
+    "project": "tsconfig.json",
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint"],
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
     }
+  },
+  "rules": {
+    "no-console": ["warn"]
+  }
 }
