--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "typescript": "4.7.2"
   },
   "scripts": {
-    "test": "jest --config test/jest-e2e.json",
-    "test:e2e": "jest --config test/jest-e2e.json",
+    "test": "jest",
     "prepare": "husky install",
     "lint": "eslint . --ext .ts"
   },
