--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "supertest": "^6.2.3"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "5.27.0",
     "@typescript-eslint/parser": "5.27.0",
