--- a/examples/api-example/package.json
+++ b/examples/api-example/package.json
@@ -28,6 +28,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "stadius": "^1.0.4",
     "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
